// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connect should not inject props if \`injectProps\` option is \`false\` 1`] = `
Array [
  <div>
    hasState: 
    false
  </div>,
  <div>
    hasActions: 
    false
  </div>,
  <div>
    hasLibraries: 
    false
  </div>,
]
`;

exports[`connect should pass actions and react to changes 1`] = `
Array [
  <button
    onClick={[Function]}
  >
    change prop1
  </button>,
  <div>
    1
  </div>,
]
`;

exports[`connect should pass actions and react to changes 2`] = `
Array [
  <button
    onClick={[Function]}
  >
    change prop1
  </button>,
  <div>
    2
  </div>,
]
`;

exports[`connect should pass actions and react to derived changes 1`] = `
Array [
  <button
    onClick={[Function]}
  >
    change prop1
  </button>,
  <div>
    2
  </div>,
]
`;

exports[`connect should pass actions and react to derived changes 2`] = `
Array [
  <button
    onClick={[Function]}
  >
    change prop1
  </button>,
  <div>
    3
  </div>,
]
`;

exports[`connect should pass actions with params and react to changes 1`] = `
Array [
  <button
    onClick={[Function]}
  >
    change prop1
  </button>,
  <div>
    1
  </div>,
]
`;

exports[`connect should pass actions with params and react to changes 2`] = `
Array [
  <button
    onClick={[Function]}
  >
    change prop1
  </button>,
  <div>
    4
  </div>,
]
`;

exports[`connect should pass derived state 1`] = `
<div>
  2
</div>
`;

exports[`connect should pass derived state functions 1`] = `
<div>
  3
</div>
`;

exports[`connect should pass other props passed to store 1`] = `
<div>
  <div>
    component from library
  </div>
</div>
`;

exports[`connect should pass state to class components 1`] = `
<div>
  1
</div>
`;

exports[`connect should pass state to functional components 1`] = `
<div>
  1
</div>
`;

exports[`useConnect should pass actions and actions with params 1`] = `
Array [
  <button
    id="no-params"
    onClick={[Function]}
  >
    change prop1
  </button>,
  <button
    id="with-params"
    onClick={[Function]}
  >
    change prop1 with params
  </button>,
  <div>
    1
  </div>,
]
`;

exports[`useConnect should pass actions and actions with params 2`] = `
Array [
  <button
    id="no-params"
    onClick={[Function]}
  >
    change prop1
  </button>,
  <button
    id="with-params"
    onClick={[Function]}
  >
    change prop1 with params
  </button>,
  <div>
    2
  </div>,
]
`;

exports[`useConnect should pass actions and actions with params 3`] = `
Array [
  <button
    id="no-params"
    onClick={[Function]}
  >
    change prop1
  </button>,
  <button
    id="with-params"
    onClick={[Function]}
  >
    change prop1 with params
  </button>,
  <div>
    3
  </div>,
]
`;

exports[`useConnect should pass libraries 1`] = `
<div>
  component from library
</div>
`;

exports[`useConnect should pass state, derived state and derived state functions 1`] = `
Array [
  <div>
    1
  </div>,
  <div>
    2
  </div>,
  <div>
    3
  </div>,
]
`;
